k8s/preview/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: barq-preview
  labels:
    name: barq-preview
    environment: preview
